--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
